pockemon user icon added

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="css/style.css" />
     <title>Chat Application</title>
@@ -17,9 +21,10 @@
         <h1><i class="far fa-comments"></i>Chat App</h1>
       </header>
 
-      <main>  
+      <main>
         <form action="room.html">
-          <label>Username
+          <label
+            >Username
             <input
               type="text"
               name="username"
@@ -29,7 +34,8 @@
             />
           </label>
 
-          <label>Room
+          <label
+            >Room
             <select name="room" id="room">
               <option value="room1">Room1</option>
               <option value="room2">Room2</option>
@@ -39,8 +45,6 @@
           <button type="submit">Join Chat</button>
         </form>
       </main>
-
     </div>
   </body>
 </html>
-
