--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <!-- font awesome -->
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+    crossorigin="anonymous"
+  />
 
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Chat Application</title>
-  </head>
-  <body>
-    <div>
-      <header>
-        <h1><i class="far fa-comments"></i>Chat App</h1>
-      </header>
+  <link rel="stylesheet" href="css/style.css"/>
+  <title>Chat Application</title>
+</head>
+<body>
+<div class="container mx-auto">
+  <header>
+    <h1 class="text-blue-600 text-3xl text-center"><i class="far fa-comments mr-3"></i>Chat App</h1>
+  </header>
 
-      <main>
-        <form action="room.html">
-          <label
-            >Username
-            <input
-              type="text"
-              name="username"
-              id="username"
-              placeholder="Enter username..."
-              required
-            />
-          </label>
+  <main>
+    <form action="room.html" class="flex flex-col">
+      <div class="flex flex-col mb-4">
+        <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="username">Username</label>
+        <input
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          type="text"
+          name="username"
+          id="username"
+          placeholder="Enter username..."
+          required
+        />
+      </div>
 
-          <label
-            >Room
-            <select name="room" id="room">
-              <option value="room1">Room1</option>
-              <option value="room2">Room2</option>
-              <option value="nodejs">Nodejs</option>
-            </select>
-          </label>
-          <button type="submit">Join Chat</button>
-        </form>
-      </main>
-    </div>
-  </body>
+      <div class="flex flex-col mb-4">
+        <label for="room" class="mb-2 uppercase font-bold text-lg text-grey-darkest">Room</label>
+        <select name="room" id="room" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          <option value="room1">Room1</option>
+          <option value="room2">Room2</option>
+          <option value="nodejs">Nodejs</option>
+        </select>
+      </div>
+      <button class="bg-white hover:bg-blue-600 hover:text-white font-semibold py-2 px-4 border border-gray-400 rounded shadow" type="submit">Join Chat</button>
+    </form>
+  </main>
+</div>
+</body>
 </html>
