room page updated with styling

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <title>Chat Application</title>
 </head>
 <body>
-<div class="container mx-auto">
+<div class="container mx-auto align-middle mt-10">
   <header>
     <h1 class="text-blue-600 text-3xl text-center"><i class="far fa-comments mr-3"></i>Chat App</h1>
   </header>
@@ -43,6 +43,7 @@
           <option value="nodejs">Nodejs</option>
         </select>
       </div>
+
       <button class="bg-white hover:bg-blue-600 hover:text-white font-semibold py-2 px-4 border border-gray-400 rounded shadow" type="submit">Join Chat</button>
     </form>
   </main>
