ready to submit

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
       <div class="flex flex-col mb-4">
         <label for="room" class="mb-2 uppercase font-bold text-lg text-grey-darkest">Room</label>
         <select name="room" id="room" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-          <option value="room1">Room1</option>
-          <option value="room2">Room2</option>
+          <option value="news">news</option>
+          <option value="covid19">covid19</option>
           <option value="nodejs">Nodejs</option>
         </select>
       </div>
