--- a/public/room.html
+++ b/public/room.html
@@ -18,7 +18,7 @@
 <div class="container mx-auto mt-10">
   <header class="flex">
     <h1 class="w-full	text-blue-600 text-3xl text-center flex-grow-h-16"><i class="far fa-comments mr-3"></i>Chat App</h1>
-    <a class="text-center text-primary flex-grow-0 bg-white rounded shadow text-dark" href="index.html">Leave Room</a>
+    <a class="text-center text-red-700 hover:text-white hover:bg-red-300 flex-grow-0 bg-white rounded shadow text-dark" href="index.html">Leave Room</a>
   </header>
 
   <main>
@@ -41,6 +41,7 @@
   </main>
 
   <div class="mt-10">
+    <div id="typingMsg"></div>
     <form id="msgFrom" class="flex">
       <!--  width: 80%  -->
       <input
